tests/semantic/valid/04_const_expr_chain.tc
const int A = 1;
const int B = A + 2;
int C = B * 3;
int main(void) {
    return C;
}
